src/test/ui/regions/regions-addr-of-self.stderr
error[E0759]: `self` has an anonymous lifetime `'_` but it needs to satisfy a `'static` lifetime requirement
  --> $DIR/regions-addr-of-self.rs:7:37
   |
LL |     pub fn chase_cat(&mut self) {
   |                      --------- this data with an anonymous lifetime `'_`...
LL |         let p: &'static mut usize = &mut self.cats_chased;
   |                                     ^^^^^^^^^^^^^^^^^^^^^ ...is used and required to live as long as `'static` here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0759`.
